# fpl-copilot

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: grade.yml  recommend.yml
data/: fpl.db
reports/: .gitkeep
rules/: rules.json
src/fpl_copilot/: __init__.py  api.py  backtest.py  cli.py  db.py  decide.py  grade.py  llm.py  model.py  reports.py  rules.py  squad.py
tests/: test_core.py
