[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-copilot"
version = "0.1.0"
description = "A self-calibrating FPL decision agent with a public scoreboard"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "PyYAML>=6.0"]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
